--- a/EyesOff.entitlements
+++ b/EyesOff.entitlements
@@ -14,5 +14,9 @@
     <true/>
     <key>com.apple.security.automation.apple-events</key>
     <true/>
+    <key>com.apple.security.temporary-exception.mach-lookup.global-name</key>
+	<array>
+	    <string>com.apple.distributed_notifications@Uv3</string>
+	</array>
 </dict>
 </plist>
